--- a/index.html
+++ b/index.html
@@ -1,17 +1,13 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Solomon Muhye</title>
+  </head>
 
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Solomon Muhye</title>
-</head>
-
-<body>
-
-  <div id="root"></div>
-  <script type="module" src="/src/main.jsx"></script>
-
-</body>
-
+  <body class="dark:bg-darkBg dark:text-lightFg text-darkFg bg-lightBg">
+    <div id="root"></div>
+    <script type="module" src="/src/main.jsx"></script>
+  </body>
 </html>
